--- a/simple-github/src/main/res/layout/activity_repository.xml
+++ b/simple-github/src/main/res/layout/activity_repository.xml
@@ -1,182 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/llActivityRepositoryContent"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="12dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-    android:paddingTop="12dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/ivActivityRepositoryProfile"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_launcher_background" />
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/llActivityRepositoryContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="12dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="12dp">
 
-    <TextView
-        android:id="@+id/tvActivityRepositoryName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:textAppearance="?android:textAppearanceLarge"
-        android:textColor="@color/githubBlue"
-        app:layout_constraintBottom_toTopOf="@+id/tvActivityRepositoryStars"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/ivActivityRepositoryProfile"
-        app:layout_constraintTop_toTopOf="@+id/ivActivityRepositoryProfile"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="username/myrepository"/>
+        <ImageView
+            android:id="@+id/ivActivityRepositoryProfile"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_launcher_background" />
 
-    <TextView
-        android:id="@+id/tvActivityRepositoryStars"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_star_black"
-        android:drawableStart="@drawable/ic_star_black"
-        android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="@color/githubBlack"
-        app:layout_constraintBottom_toBottomOf="@+id/ivActivityRepositoryProfile"
-        app:layout_constraintStart_toStartOf="@+id/tvActivityRepositoryName"
-        app:layout_constraintTop_toBottomOf="@+id/tvActivityRepositoryName"
-        tools:text="100 Stars" />
+        <TextView
+            android:id="@+id/tvActivityRepositoryName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textColor="@color/githubBlue"
+            app:layout_constraintBottom_toTopOf="@+id/tvActivityRepositoryStars"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/ivActivityRepositoryProfile"
+            app:layout_constraintTop_toTopOf="@+id/ivActivityRepositoryProfile"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="username/myrepository"/>
 
-    <TextView
-        android:id="@+id/tvActivityRepositoryDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/ivActivityRepositoryDescription"
-        app:layout_constraintTop_toTopOf="@+id/ivActivityRepositoryDescription"
-        tools:text="My Description" />
+        <TextView
+            android:id="@+id/tvActivityRepositoryStars"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_star_black"
+            android:drawableStart="@drawable/ic_star_black"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textColor="@color/githubBlack"
+            app:layout_constraintBottom_toBottomOf="@+id/ivActivityRepositoryProfile"
+            app:layout_constraintStart_toStartOf="@+id/tvActivityRepositoryName"
+            app:layout_constraintTop_toBottomOf="@+id/tvActivityRepositoryName"
+            tools:text="100 Stars" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvActivityRepositoryDescription"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="8dp"
-        android:text="@string/description"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:layout_constraintBottom_toBottomOf="@+id/ivActivityRepositoryDescription"
-        app:layout_constraintStart_toEndOf="@+id/ivActivityRepositoryDescription"
-        app:layout_constraintTop_toBottomOf="@+id/tvActivityRepositoryDescription" />
+        <TextView
+            android:id="@+id/tvActivityRepositoryDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="8dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            app:layout_constraintBottom_toTopOf="@+id/textView"
+            app:layout_constraintStart_toEndOf="@+id/ivActivityRepositoryDescription"
+            app:layout_constraintTop_toTopOf="@+id/ivActivityRepositoryDescription"
+            tools:text="My Description" />
 
-    <ImageView
-        android:id="@+id/ivActivityRepositoryDescription"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="48dp"
-        android:src="@drawable/ic_description_black"
-        android:tint="@color/gray"
-        app:layout_constraintEnd_toEndOf="@+id/ivActivityRepositoryProfile"
-        app:layout_constraintStart_toStartOf="@+id/ivActivityRepositoryProfile"
-        app:layout_constraintTop_toBottomOf="@+id/ivActivityRepositoryProfile" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvActivityRepositoryDescription"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="8dp"
+            android:text="@string/description"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintBottom_toBottomOf="@+id/ivActivityRepositoryDescription"
+            app:layout_constraintStart_toEndOf="@+id/ivActivityRepositoryDescription"
+            app:layout_constraintTop_toBottomOf="@+id/tvActivityRepositoryDescription" />
 
-    <TextView
-        android:id="@+id/tvActivityRepositoryLanguage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/tvActivityRepositoryDescription"
-        app:layout_constraintTop_toTopOf="@+id/ivActivityRepositoryLanguage"
-        tools:text="Kotlin" />
+        <ImageView
+            android:id="@+id/ivActivityRepositoryDescription"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="48dp"
+            android:src="@drawable/ic_description_black"
+            android:tint="@color/gray"
+            app:layout_constraintEnd_toEndOf="@+id/ivActivityRepositoryProfile"
+            app:layout_constraintStart_toStartOf="@+id/ivActivityRepositoryProfile"
+            app:layout_constraintTop_toBottomOf="@+id/ivActivityRepositoryProfile" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvActivityRepositoryLanguage"
-        android:text="@string/language"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:layout_constraintBottom_toBottomOf="@+id/ivActivityRepositoryLanguage"
-        app:layout_constraintStart_toStartOf="@+id/tvActivityRepositoryLanguage"
-        app:layout_constraintTop_toBottomOf="@+id/tvActivityRepositoryLanguage" />
+        <TextView
+            android:id="@+id/tvActivityRepositoryLanguage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            app:layout_constraintBottom_toTopOf="@+id/textView2"
+            app:layout_constraintStart_toStartOf="@+id/tvActivityRepositoryDescription"
+            app:layout_constraintTop_toTopOf="@+id/ivActivityRepositoryLanguage"
+            tools:text="Kotlin" />
 
-    <ImageView
-        android:id="@+id/ivActivityRepositoryLanguage"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="48dp"
-        android:src="@drawable/ic_language_black"
-        android:tint="@color/gray"
-        app:layout_constraintEnd_toEndOf="@+id/ivActivityRepositoryDescription"
-        app:layout_constraintStart_toStartOf="@+id/ivActivityRepositoryDescription"
-        app:layout_constraintTop_toBottomOf="@+id/ivActivityRepositoryDescription" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvActivityRepositoryLanguage"
+            android:text="@string/language"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintBottom_toBottomOf="@+id/ivActivityRepositoryLanguage"
+            app:layout_constraintStart_toStartOf="@+id/tvActivityRepositoryLanguage"
+            app:layout_constraintTop_toBottomOf="@+id/tvActivityRepositoryLanguage" />
 
-    <ImageView
-        android:id="@+id/ivActivityRepositoryLastUpdate"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="48dp"
-        android:src="@drawable/ic_update_black"
-        android:tint="@color/gray"
-        app:layout_constraintEnd_toEndOf="@+id/ivActivityRepositoryLanguage"
-        app:layout_constraintStart_toStartOf="@+id/ivActivityRepositoryLanguage"
-        app:layout_constraintTop_toBottomOf="@+id/ivActivityRepositoryLanguage" />
+        <ImageView
+            android:id="@+id/ivActivityRepositoryLanguage"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="48dp"
+            android:src="@drawable/ic_language_black"
+            android:tint="@color/gray"
+            app:layout_constraintEnd_toEndOf="@+id/ivActivityRepositoryDescription"
+            app:layout_constraintStart_toStartOf="@+id/ivActivityRepositoryDescription"
+            app:layout_constraintTop_toBottomOf="@+id/ivActivityRepositoryDescription" />
 
-    <TextView
-        android:id="@+id/tvActivityRepositoryLastUpdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="@+id/tvActivityRepositoryLanguage"
-        app:layout_constraintTop_toTopOf="@+id/ivActivityRepositoryLastUpdate"
-        tools:text="yyyy/MM/dd" />
+        <ImageView
+            android:id="@+id/ivActivityRepositoryLastUpdate"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="48dp"
+            android:src="@drawable/ic_update_black"
+            android:tint="@color/gray"
+            app:layout_constraintEnd_toEndOf="@+id/ivActivityRepositoryLanguage"
+            app:layout_constraintStart_toStartOf="@+id/ivActivityRepositoryLanguage"
+            app:layout_constraintTop_toBottomOf="@+id/ivActivityRepositoryLanguage" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvActivityRepositoryLastUpdate"
-        android:text="@string/last_update"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:layout_constraintBottom_toBottomOf="@+id/ivActivityRepositoryLastUpdate"
-        app:layout_constraintStart_toStartOf="@+id/tvActivityRepositoryLastUpdate"
-        app:layout_constraintTop_toBottomOf="@+id/tvActivityRepositoryLastUpdate" />
+        <TextView
+            android:id="@+id/tvActivityRepositoryLastUpdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            app:layout_constraintBottom_toTopOf="@+id/textView3"
+            app:layout_constraintStart_toStartOf="@+id/tvActivityRepositoryLanguage"
+            app:layout_constraintTop_toTopOf="@+id/ivActivityRepositoryLastUpdate"
+            tools:text="yyyy/MM/dd" />
 
-    <ProgressBar
-        android:id="@+id/pbActivityRepository"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvActivityRepositoryLastUpdate"
+            android:text="@string/last_update"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintBottom_toBottomOf="@+id/ivActivityRepositoryLastUpdate"
+            app:layout_constraintStart_toStartOf="@+id/tvActivityRepositoryLastUpdate"
+            app:layout_constraintTop_toBottomOf="@+id/tvActivityRepositoryLastUpdate" />
 
-    <TextView
-        android:id="@+id/tvActivityRepositoryMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/githubBlack"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ProgressBar
+            android:id="@+id/pbActivityRepository"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/tvActivityRepositoryMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/githubBlack"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+</layout>
