--- a/simple-github/src/main/res/layout/item_repository.xml
+++ b/simple-github/src/main/res/layout/item_repository.xml
@@ -1,53 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="72dp"
-    android:background="?attr/selectableItemBackground"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/ivItemRepositoryProfile"
-        android:layout_width="47dp"
-        android:layout_height="48dp"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_launcher_background" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:background="?attr/selectableItemBackground"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp">
 
-    <TextView
-        android:id="@+id/tvItemRepositoryName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="8dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/githubBlack"
-        app:layout_constraintBottom_toTopOf="@+id/tvItemRepositoryLanguage"
-        app:layout_constraintStart_toEndOf="@+id/ivItemRepositoryProfile"
-        app:layout_constraintTop_toTopOf="@+id/ivItemRepositoryProfile"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="Owner/Repository" />
+        <ImageView
+            android:id="@+id/ivItemRepositoryProfile"
+            android:layout_width="47dp"
+            android:layout_height="48dp"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_launcher_background" />
 
-    <TextView
-        android:id="@+id/tvItemRepositoryLanguage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        app:layout_constraintBottom_toBottomOf="@+id/ivItemRepositoryProfile"
-        app:layout_constraintStart_toEndOf="@+id/ivItemRepositoryProfile"
-        app:layout_constraintTop_toBottomOf="@+id/tvItemRepositoryName"
-        tools:text="Language" />
+        <TextView
+            android:id="@+id/tvItemRepositoryName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginStart="8dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/githubBlack"
+            app:layout_constraintBottom_toTopOf="@+id/tvItemRepositoryLanguage"
+            app:layout_constraintStart_toEndOf="@+id/ivItemRepositoryProfile"
+            app:layout_constraintTop_toTopOf="@+id/ivItemRepositoryProfile"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="Owner/Repository" />
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/tvItemRepositoryLanguage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginStart="8dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            app:layout_constraintBottom_toBottomOf="@+id/ivItemRepositoryProfile"
+            app:layout_constraintStart_toEndOf="@+id/ivItemRepositoryProfile"
+            app:layout_constraintTop_toBottomOf="@+id/tvItemRepositoryName"
+            tools:text="Language" />
+
+    </android.support.constraint.ConstraintLayout>
+</layout>
